tmp/gateway-asm-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asm-gateways
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: asm-ingressgateway-http-xlb
  namespace: asm-gateways
spec:
  gatewayClassName: gke-l7-gxlb-mc
  listeners:
  - name: web
    port: 80
    protocol: HTTP
    allowedRoutes:
      kinds: 
        - kind: HTTPRoute
